kubernetes/apps/gdd-service/paperless/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    tailscale.com/proxy-group: ts-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: paperless.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-app
                port:
                  number: 8000
  tls:
    - hosts:
        - paperless.barn-walleye.ts.net
